# jpeg-cmake

./: .gitignore  CMakeLists-IJG.txt  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
resources/: CMakeLists.txt  ConfigureJConfig.cmake  jconfig.h.in  libjpeg.pc.cmakein  test-libjpeg.sh
